Add suggested improvements